# yako

./: .gitignore  Dockerfile  README.md  bot.yml  builder.py  docker-compose.vega.yml  docker-compose.yml  example.env  main.py  pyproject.toml  scenario.yml
example_scenarios/: _module_scenario.yml  get_my_leader.yml  module_scenario.yml  simple_scenario.yml  vkr_calendar.yml  vkr_dates.yml  vkr_dates_auto.yml  vkr_help.yml  Акт внедрения_auto.yml  Аннотация_auto.yml  Даты защиты_auto.yml  Доклад_auto.yml  Допуск к защите_auto.yml  Задание_auto.yml  Задачи_auto.yml  Заключение о готовности_auto.yml  Запись на предзащиту_auto.yml  Когда это уже закончится ?_auto.yml  Код программы_auto.yml  НТК_auto.yml  Отзыв руководителя_auto.yml  Переплет_auto.yml  Пояснительная записка_auto.yml  Презентация_auto.yml  Реферат_auto.yml  Рецензия_auto.yml  Сдача на кафедру_auto.yml  Сроки_auto.yml  Тема_auto.yml  Требования для прохождения предзащиты магистры_auto.yml  Требования к зачету_auto.yml  Требования успешной предзащиты бакалавры_auto.yml  Цель_auto.yml  календарь.yml  консультант.yml  руководитель.yml
example_scenarios/modules/: get_calendar_plan.py  get_vkr_info.py  random_modul.py
templates/: simple.template.yml
yako/: context_manager.py  exceptions.py  parser.py  runner.py  scenario.py
